# hakyll-bootstrap

./: .gitignore  LICENSE  Main.hs  README.md  build.hs  hakyll-bootstrap.cabal  index.html  stack.yaml
css/: syntax.css
pages/: about.html  contact.html  privacy.html  signup.html  team.html  tos.html
posts/: post1.md
templates/: archive.html  footer.html  nav.html  page.html  post.html
