name:                hakyll-bootstrap
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Web
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
cabal-version:       >=1.16

executable blog
  default-language:    Haskell2010
  main-is:             build.hs
  build-depends:
      base       >= 4.6 && <4.7
    , containers >= 0.5 && <0.6
    , pandoc     >= 1.11
    , hakyll     >= 4.3 && <4.4
